Parenting is broken #82312

Closed
opened 2020-11-01 21:10:47 +01:00 by Daniel Salazar · 17 comments
Member

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: GeForce GTX 1080 with Max-Q Design/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 456.71

Blender Version
Broken: version: 2.92.0 Alpha, branch: master, commit date: 2020-11-01 08:11, hash: a1f46ac9dc
Worked: version: 2.92.0 Alpha, branch: master, commit date: 2020-10-27 10:40, hash: 30f626fe4c
Caused by a combination of these
b8d4a2aff8
ad35fa1993

Short description of error
Ctrl+P Parenting is broken

Exact steps for others to reproduce the error
Create two objects.
Ctrl+P
Select any of the options

**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: GeForce GTX 1080 with Max-Q Design/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 456.71 **Blender Version** Broken: version: 2.92.0 Alpha, branch: master, commit date: 2020-11-01 08:11, hash: `a1f46ac9dc` Worked: version: 2.92.0 Alpha, branch: master, commit date: 2020-10-27 10:40, hash: `30f626fe4c` Caused by a combination of these b8d4a2aff8 ad35fa1993 **Short description of error** Ctrl+P Parenting is broken **Exact steps for others to reproduce the error** Create two objects. Ctrl+P Select any of the options
Author
Member

Added subscriber: @zanqdo

Added subscriber: @zanqdo

#82549 was marked as duplicate of this issue

#82549 was marked as duplicate of this issue

#82335 was marked as duplicate of this issue

#82335 was marked as duplicate of this issue

#82321 was marked as duplicate of this issue

#82321 was marked as duplicate of this issue

#82316 was marked as duplicate of this issue

#82316 was marked as duplicate of this issue

Added subscriber: @deadpin

Added subscriber: @deadpin

I can confirm even on 2.91 Beta... Hope this narrows down the issue further:

Broken: version: 2.91.0 Beta, branch: master, commit date: 2020-10-30 16:36, hash: 8b806c86e1

I can confirm even on 2.91 Beta... Hope this narrows down the issue further: Broken: version: 2.91.0 Beta, branch: master, commit date: 2020-10-30 16:36, hash: `8b806c86e1`

Added subscribers: @dr.sybren, @rjg

Added subscribers: @dr.sybren, @rjg

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

I can confirm. The issue was introduced by commit ad35fa1993 @dr.sybren

I can confirm. The issue was introduced by commit ad35fa1993 @dr.sybren

Added subscriber: @PrettyFireNOI7

Added subscriber: @PrettyFireNOI7
Member

Added subscribers: @MarkStead-2, @lichtwerk

Added subscribers: @MarkStead-2, @lichtwerk
Sybren A. Stüvel self-assigned this 2020-11-02 09:55:37 +01:00

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'

Resolved by rolling back ad35fa1993

Resolved by rolling back ad35fa1993

Added subscriber: @emilsvfx

Added subscriber: @emilsvfx

Added subscriber: @kursadk

Added subscriber: @kursadk

Added subscriber: @neouser

Added subscriber: @neouser
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
7 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#82312
No description provided.